fixing canvas on mobile

--- a/css/_genrtor.css
+++ b/css/_genrtor.css
@@ -337,5 +337,8 @@ img +.meme-name:hover{
         padding: 4%;
         min-height: 4%;
     }
+    #canvas{
+        width: 100%;
+    }
 }
 
